@@ -16,6 +16,7 @@ class cSatipConfig
 private:
   unsigned int operatingModeM;
   unsigned int traceModeM;
+  unsigned int ciExtensionM;
   unsigned int eitScanM;
   unsigned int useBytesM;
   int disabledSourcesM[MAX_DISABLED_SOURCES_COUNT];
@@ -58,6 +59,7 @@ public:
   void ToggleOperatingMode(void) { operatingModeM = (operatingModeM + 1) % eOperatingModeCount; }
   unsigned int GetTraceMode(void) const { return traceModeM; }
   bool IsTraceMode(eTraceMode modeP) const { return (traceModeM & modeP); }
+  unsigned int GetCIExtension(void) const { return ciExtensionM; }
   unsigned int GetEITScan(void) const { return eitScanM; }
   unsigned int GetUseBytes(void) const { return useBytesM; }
   unsigned int GetDisabledSourcesCount(void) const;
@@ -67,6 +69,7 @@ public:
 
   void SetOperatingMode(unsigned int operatingModeP) { operatingModeM = operatingModeP; }
   void SetTraceMode(unsigned int modeP) { traceModeM = (modeP & eTraceModeMask); }
+  void SetCIExtension(unsigned int onOffP) { ciExtensionM = onOffP; }
   void SetEITScan(unsigned int onOffP) { eitScanM = onOffP; }
   void SetUseBytes(unsigned int onOffP) { useBytesM = onOffP; }
   void SetDisabledSources(unsigned int indexP, int sourceP);
