@@ -329,6 +329,7 @@ eOSState cSatipMenuInfo::ProcessKey(eKeys keyP)
 cSatipPluginSetup::cSatipPluginSetup()
 : deviceCountM(0),
   operatingModeM(SatipConfig.GetOperatingMode()),
+  ciExtensionM(SatipConfig.GetCIExtension()),
   eitScanM(SatipConfig.GetEITScan()),
   numDisabledSourcesM(SatipConfig.GetDisabledSourcesCount()),
   numDisabledFiltersM(SatipConfig.GetDisabledFiltersCount())
@@ -364,6 +365,10 @@ void cSatipPluginSetup::Setup(void)
   helpM.Append(tr("Define the used operating mode for all SAT>IP devices:\n\noff - devices are disabled\nlow - devices are working at the lowest priority\nnormal - devices are working within normal parameters\nhigh - devices are working at the highest priority"));
 
   if (operatingModeM) {
+#if defined(APIVERSNUM) && APIVERSNUM >= 20107
+     Add(new cMenuEditBoolItem(tr("Enable CI extension"), &ciExtensionM));
+     helpM.Append(tr("Define whether a CI extension shall be used.\n\nThis setting enables integrated CI/CAM handling found in some SAT>IP hardware (e.g. Digital Devices OctopusNet)."));
+#endif
      Add(new cMenuEditBoolItem(tr("Enable EPG scanning"), &eitScanM));
      helpM.Append(tr("Define whether the EPG background scanning shall be used.\n\nThis setting disables the automatic EIT scanning functionality for all SAT>IP devices."));
 
@@ -510,11 +515,13 @@ void cSatipPluginSetup::Store(void)
 {
   // Store values into setup.conf
   SetupStore("OperatingMode", operatingModeM);
+  SetupStore("EnableCIExtension", ciExtensionM);
   SetupStore("EnableEITScan", eitScanM);
   StoreSources("DisabledSources", disabledSourcesM);
   StoreFilters("DisabledFilters", disabledFilterIndexesM);
   // Update global config
   SatipConfig.SetOperatingMode(operatingModeM);
+  SatipConfig.SetCIExtension(ciExtensionM);
   SatipConfig.SetEITScan(eitScanM);
   for (int i = 0; i < MAX_DISABLED_SOURCES_COUNT; ++i)
       SatipConfig.SetDisabledSources(i, disabledSourcesM[i]);
