@@ -95,3 +95,4 @@ VDR Plugin 'satip' Revision History
 - Fixed the server teardown.
 - Removed the unnecessary config directory definition.
 - Added a fallback for older glibc libraries.
+- Added support for Digital Devices CI extension.
